ajax사용 회원가입시 id중복확인이랑 몇개 안돌아가고 오류뜨는거 잡아놨습니다

--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -39,7 +39,11 @@
 /postUpdatePro.do=service_post.PostUpdateProAction
 # Page
 /boardList.do=service_post.BoardNoticeListAction
+/boardNoticeList.do=service_post.BoardNoticeListAction
 
 #map
 /explorer.do=service.ExplorerAction
 /campView.do=service.CampViewAction
+
+#Ajax
+/ajaxIdCheck.do=service_member.AjaxIdCheckAction
