--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -19,6 +19,8 @@
 /findUserIdPro.do=service_member.FindUserIdProAction
 /findUserPwPro.do=service_member.FindUserPwProAction
 /userAskWritePro.do=service_member.UserAskWriteProAction
+/userLike.do=service_member.UserLikeAction
+/userWriteList.do=service_member.UserWriteListAction
 # Page
 /mainPage.do=service_main.MainPageAction
 /userAgree.do=service_member.UserAgreeAction
