문의사항 추가파일

--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -6,6 +6,7 @@
 /userDeleteForm.do=service_member.UserDeleteFormAction
 /findUserIdForm.do=service_member.FindUserIdFormAction
 /findUserPwForm.do=service_member.FindUserPwFormAction
+/userAskContent.do=service_member.UserAskContentAction
 /userAskWriteForm.do=service_member.UserAskWriteFormAction
 # Action
 /userLoginPro.do=service_member.UserLoginProAction
