6/11 임준홍 최신입니다

--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -9,12 +9,13 @@
 /userAskContent.do=service_member.UserAskContentAction
 /userAskWriteForm.do=service_member.UserAskWriteFormAction
 # Action
+/userInfo.do=service_member.UserInfoAction
 /userLoginPro.do=service_member.UserLoginProAction
 /userLogoutPro.do=service_member.UserLogoutProAction
 /userJoinPro.do=service_member.UserJoinProAction
 /userUpdatePro.do=service_member.UserUpdateProAction
 /userDeletePro.do=service_member.UserDeleteProAction
-/userIdCheckPro.do=service_member.UserIdCheckProAction
+/userDeleteUpdate.do=service_member.UserDeleteUpdateAction
 /userEmailCheckPro.do=service_member.UserEmailCheckProAction
 /userList.do=service_member.UserListAction
 /findUserIdPro.do=service_member.FindUserIdProAction
