--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -42,5 +42,9 @@
 
 #map
 /explorer.do=service.ExplorerAction
-/campView.do=service.CampViewAction
 /explorerCf.do=service.ExplorerCfAction
+/campView.do=service.CampViewAction
+/campList.do=service.CampListAction
+/campWriteForm.do=service.CampWriteFormAction
+/campWritePro.do=service.CampWriteProAction
+/campContent.do=service.CampContentAction
