이메일 중복체크 ajax

--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -52,6 +52,5 @@
 
 #Ajax
 /ajaxIdCheck.do=service_member.AjaxIdCheckAction
-
+/ajaxEmailCheck.do=service_member.AjaxEmailCheckAction
 /explorerCf.do=service.ExplorerCfAction
-
