--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -50,3 +50,5 @@
 /campContent.do=service.CampContentAction
 /campUpdateForm.do=service.CampUpdateFormAction
 /campUpdatePro.do=service.CampUpdateProAction
+/campDeleteForm.do=service.CampDeleteFormAction
+/campDeletePro.do=service.CampDeleteProAction
