회원가입페이지 수정, command.properties 3팀 새로 추가한것 오류나서 주석처리

--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -61,8 +61,7 @@
 /campContent.do=service.CampContentAction
 /campUpdateForm.do=service.CampUpdateFormAction
 /campUpdatePro.do=service.CampUpdateProAction
-<<<<<<< HEAD
-=======
-/campDeleteForm.do=service.CampDeleteFormAction
-/campDeletePro.do=service.CampDeleteProAction
->>>>>>> 03_team
+# service not found
+#/campDeleteForm.do=service.CampDeleteFormAction
+#/campDeletePro.do=service.CampDeleteProAction
+
