6/19 마이페이지관련 최신본입니다

--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -9,14 +9,13 @@
 /userAskContent.do=service_member.UserAskContentAction
 /userAskWriteForm.do=service_member.UserAskWriteFormAction
 # Action
-/userInfo.do=service_member.UserInfoAction
 /userLoginPro.do=service_member.UserLoginProAction
 /userLogoutPro.do=service_member.UserLogoutProAction
+/userInfo.do=service_member.UserInfoAction
 /userJoinPro.do=service_member.UserJoinProAction
 /userUpdatePro.do=service_member.UserUpdateProAction
 /userDeletePro.do=service_member.UserDeleteProAction
 /userDeleteUpdate.do=service_member.UserDeleteUpdateAction
-/userEmailCheckPro.do=service_member.UserEmailCheckProAction
 /userList.do=service_member.UserListAction
 /findUserIdPro.do=service_member.FindUserIdProAction
 /findUserPwPro.do=service_member.FindUserPwProAction
@@ -24,6 +23,7 @@
 /userLike.do=service_member.UserLikeAction
 /userWriteList.do=service_member.UserWriteListAction
 # Page
+/index.do=service_main.MainPageAction
 /mainPage.do=service_main.MainPageAction
 /userAgree.do=service_member.UserAgreeAction
 /userAskForm.do=service_member.UserAskFormAction
@@ -52,6 +52,7 @@
 
 #Ajax
 /ajaxIdCheck.do=service_member.AjaxIdCheckAction
+/ajaxEmailCheck.do=service_member.AjaxEmailCheckAction
 # service not found
 #/ajaxEmailCheck.do=service_member.AjaxEmailCheckAction
 /explorerCf.do=service.ExplorerCfAction
