2team 푸쉬 하겠습니다

--- a/j20210502_1/WebContent/WEB-INF/command.properties
+++ b/j20210502_1/WebContent/WEB-INF/command.properties
@@ -41,6 +41,8 @@
 /postWritePro.do=service_post.PostWriteProAction
 /postDeletePro.do=service_post.PostDeleteProAction
 /postUpdatePro.do=service_post.PostUpdateProAction
+/postCommentWrite.do=service_post.PostCommentWriteAction
+/postReCommentWrite.do=service_post.PostReCommentWriteAction
 # Page
 /boardList.do=service_post.BoardNoticeListAction
 /boardNoticeList.do=service_post.BoardNoticeListAction
